<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lentcoding.balloonpop.MainActivity">

    <!-- Container for pin icons, top right -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/pushpin1"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:src="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin2"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:src="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin3"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:src="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin4"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:src="@drawable/pin"
            android:tint="@color/pinColor" />

        <ImageView
            android:id="@+id/pushpin5"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:src="@drawable/pin"
            android:tint="@color/pinColor" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrey"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/go_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="goButtonClickHandler"
            android:text="@string/play_game" />

        <LinearLayout
            android:id="@+id/status_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/viewLevelLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_label"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/viewLevel"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:gravity="end"
                android:text="@string/max_number"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/viewScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_label"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/viewScore"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/max_number"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/viewHiScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi_score"
                android:textSize="@dimen/status_text_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/viewHiScore"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:text="@string/max_number"
                android:textSize="@dimen/status_text_size"
                android:layout_gravity="end"
                android:textStyle="bold"
                android:textAlignment="center" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
